# hdr-nn

./: CMakeLists.txt  LICENSE  README.md
include/: dataLoader.h  logic.h  neuralNetwork.h  timer.h
src/: demonstration.html  main.cpp
src/learn/: backPropagation.cpp  feedForward.cpp  train.cpp
src/nn/: nn.cpp
src/nn/learn/: backPropagation.cpp  feedForward.cpp  train.cpp
test/: results.txt
